# dockerfile-wizardry

./: .coverage  .dockerignore  CONTRIBUTING.md  Dockerfile  Dockerfile.single-stage-alpine  Dockerfile.single-stage-slim  LICENSE  README.md  RUNTIME_SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
spellbook/: __init__.py  main.py
spellbook/docs/: ARCHITECTURE.md
spellbook/enchantments/: __init__.py  protective.py
spellbook/potions/: __init__.py  brewing.py
spellbook/spells/: __init__.py  incantations.py
spellbook/tests/: test_potions.py  test_spells.py
