[tool.poetry]
name = "dockerfile-wizardry"
version = "1.0.0"
description = "Demonstrating Docker best practices with magical flair"
authors = ["Jakub Płachecki <jakub@plachecki.dev>"]
readme = "README.md"
packages = [{include = "spellbook"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
isort = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
black = "^24.0.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["spellbook/tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
